--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -22,9 +22,9 @@
       {% if records %}
       {% for record in records %}
       <tr>
-      <td>{{ record.first_name }}</td>
-        <td>{{ record.last_name }}</td>
+      <td>{{ record.first_name }} {{  record.last_name  }}</td>
         <td>{{ record.email }}</td>
+          <td>{{  record.phone  }}</td>
         <td>{{ record.address }}</td>
         <td>{{ record.city }}</td>
         <td>{{ record.state }}</td>
@@ -34,12 +34,8 @@
       </tr>
       {% endfor %}
     {% endif %}
-
-
   </tbody>
 </table>
-
-
 
     {% else %}
     <div class="col-md-6 offset-md-3">
